Done account settings with validator
