# resources/views/pages/settings.blade.php
@@ -15,7 +15,7 @@
         <button type="button" class="btn btn-primary p-2 col-4" id="accept-button" data-bs-toggle="modal"
             data-bs-target="#staticBackdropEmail">Change</button>
         <h1 class="h4 fw-bold">Email Address</h1>
-        <h2 class="h5 fw-lighter">{{$member->email}}</h2>
+        <h2 class="h5 fw-lighter" id="member-email">{{$member->email}}</h2>
     </div>
 
     <div class="col-12 col-lg-10 mt-5 mx-auto px-4 pt-5 pb-5 rounded" id="field-container">
@@ -42,30 +42,30 @@
                     <button type="button" data-bs-dismiss="modal" id="close-window-button" aria-label="Close"><span
                             class="material-icons-round">close</span></button>
                 </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-floating mb-5">
-                            <input type="email" id="inputNewEmail" class="form-control mb-3" placeholder=" " required
-                                autofocus>
+                <form id="change-email" autocomplete="off">
+                    <div class="modal-body">
+                        <div class="form-floating mb-4">
+                            <input type="email" id="inputNewEmail" class="form-control" placeholder=" " required>
                             <label for="inputNewEmail">New Email Address</label>
+                            <div class="invalid-feedback error-email"></div>
                         </div>
 
-                        <div class="form-floating mb-5">
-                            <input type="email" id="inputConfEmail" class="form-control mb-3" placeholder=" " required
-                                autofocus>
+                        <div class="form-floating mb-4">
+                            <input type="email" id="inputConfEmail" class="form-control" placeholder=" " required>
                             <label for="inputConfEmail">Confirm New Email Address</label>
+                            <div class="invalid-feedback error-email_confirmation"></div>
                         </div>
-                        <div class="form-floating mb-5">
-                            <input type="password" id="inputPass" class="form-control mb-3" placeholder=" " required
-                                autofocus>
+                        <div class="form-floating">
+                            <input type="password" id="inputPass" class="form-control" placeholder=" " required>
                             <label for="inputPass">Password</label>
+                            <div class="invalid-feedback error-password"></div>
                         </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Save Changes</button>
-                </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -79,30 +79,34 @@
                     <button type="button" data-bs-dismiss="modal" id="close-window-button" aria-label="Close"><span
                             class="material-icons-round">close</span></button>
                 </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-floating mb-5">
-                            <input type="password" id="inputPass" class="form-control mb-3" placeholder=" "
+                <form id="change-password" autocomplete="off">
+                    <div class="modal-body">
+                        <div class="form-floating mb-4">
+                            <input type="password" id="inputOldPass" class="form-control" placeholder=" "
                                 required autofocus>
-                            <label for="inputPass">Old Password</label>
+                            <label for="inputOldPass">Old Password</label>
+                            <div class="invalid-feedback error-old_password">
+                            </div>
                         </div>
-                        <div class="form-floating mb-5">
-                            <input type="password" id="inputNewPass" class="form-control mb-3" placeholder=" "
+                        <div class="form-floating mb-4">
+                            <input type="password" id="inputNewPass" class="form-control" placeholder=" "
                                 required autofocus>
                             <label for="inputNewPass">New Password</label>
+                            <div class="invalid-feedback error-new_password"></div>
                         </div>
 
-                        <div class="form-floating mb-5">
-                            <input type="password" id="inputConfPass" class="form-control mb-3" placeholder=" "
+                        <div class="form-floating">
+                            <input type="password" id="inputConfPass" class="form-control" placeholder=" "
                                 required autofocus>
                             <label for="inputConfPass">Confirm New Password</label>
+                            <div class="invalid-feedback error-new_password_confirmation"></div>
                         </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Save Changes</button>
-                </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -116,26 +120,31 @@
                     <button type="button" data-bs-dismiss="modal" id="close-window-button" aria-label="Close"><span
                             class="material-icons-round">close</span></button>
                 </div>
-                <div class="modal-body">
-                    <p class="game-quote mt-3">“You’ve met with a terrible fate, haven’t you?” </p>
-                    <p class="game-quote-origin">- The Legend of Zelda: Majora’s Mask </p>
-                    <!--Rotating Game Quotes-->
-                    <form>
-                        <div class="form-floating mb-5">
-                            <input type="password" id="inputDeleteAccount" class="form-control mb-3" placeholder=" "
+                <form id="delete-acc" data-username="{{ Auth::user()->username }}" autocomplete="off">
+                    <div class="modal-body">
+                        <p class="game-quote mt-3">“You’ve met with a terrible fate, haven’t you?” </p>
+                        <p class="game-quote-origin">- The Legend of Zelda: Majora’s Mask </p>
+                        <!--Rotating Game Quotes-->
+                        <div class="form-floating">
+                            <input type="password" id="inputDeleteAccount" class="form-control" placeholder=" "
                                 required autofocus>
-                            <label for="inputPassword">Enter Account Password</label>
+                            <label for="inputDeleteAccount">Enter Account Password</label>
+                            <div class="invalid-feedback error-password"></div>
                         </div>
-                        <form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 </section>
 
 @include('partials.footer')
+@push('endscripts')
+    <script src={{ asset('js/ajax.js') }}></script>
+    <script src={{ asset('js/settings.js') }}></script>
+@endpush
 @endsection
